# CG_RayTracing

./: CMakeLists.txt  Makefile  MyMeshObject.cpp  MyMeshObject.h  MyVecs.h  README.md  Scene1.h  Scene2.h  Scene3.h  SceneChooser.h  camera.cpp  camera.h  ex5.cpp  general.h  lights.h  object.cpp  object.h  polygon.cpp  polygon.h  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
